infra/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-deployment
spec:
  selector:
    matchLabels:
      app: todo
  replicas: 3
  template:
    metadata:
      labels:
        app: todo
    spec:
      securityContext:
        runAsUser: 1000
        runAsNonRoot: true
      containers:
        - name: todo-service
          image: gcr.io/sensys/todo:latest # to be change
          imagePullPolicy: Always
          ports:
            - name: grpc
              containerPort: 6666
          resources:
            requests:
              cpu: 5m
              memory: 15Mi
            limits:
              cpu: 50m
              memory: 150Mi
          securityContext:
            runAsNonRoot: true
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
